refactor: replace Map.of() with Collections.emptyMap()